--- a/src/main/resources/templates/uutiset.html
+++ b/src/main/resources/templates/uutiset.html
@@ -14,8 +14,11 @@
                 </a>
             </li>
         </ul>
-
         
+        <form action="/uutiset/uusi">
+            <input type="submit" value="Luo uusi" />
+        </form>
+
     </body>
 </html>
 
