--- a/src/main/resources/templates/uutiset_uusi.html
+++ b/src/main/resources/templates/uutiset_uusi.html
@@ -17,9 +17,8 @@ and open the template in the editor.
             <p>Otsikko: <input name="otsikko"></input></p>
             <p>Ingressi: <textarea name="ingressi"></textarea></p>
             <p>Teksti: <textarea name="teksti"></textarea></p>
-            <p>Kuva: </p>
-            <input type="file" name="kuva" id="file"/>
-            <input type="submit" value="Lisää"/></br></br>
+            <!-- <p>Kuva: <input type="file" name="kuva" id="file"/>
+            <input type="submit" value="Lisää"/></br></p> -->
             <input type="submit" value="Lisää"></input>
         </form>
     </body>
